# backend_vue_c--

./: .gitignore  CMakeLists.txt  mai
inc/: SSPComs.h  ssp_defines.h
include/: coneccionBd.hpp
include/controller/: configuracion.controller.hpp  main.controller.hpp  session.controller.hpp  test.controller.hpp  venta.controller.hpp
include/controller/accion/: venta.controller.hpp
include/db/: binaryfile.hpp  conectbd.hpp  sqlite.hpp  wrapbinary.hpp
include/model/: acciones.hpp  conectbd.hpp  config.hpp  niveles_dinero.hpp  persona.hpp  roles.hpp  usuarios.hpp  usuarios_config.hpp  usuarios_roles.hpp
include/service/: main.service.hpp  persona.service.hpp
include/shared/: config_text.hpp  helper.hpp  niveles_almacenamiento.hpp
include/view/: config_view.hpp  main.controller_view.hpp  nip_sett_view.hpp  nip_view.hpp
include/view/config/: view_five.hpp  view_four.hpp  view_one.hpp  view_seven.hpp  view_six.hpp  view_three.hpp  view_two.hpp
lib/: Encryption.c  Encryption.h  ITLSSPProc.c  Random.c  Random.h  SSPComs.c  SSPDownload.c  defs.h  enctest.c  serialfunc.c  ssp_commands.c
src/: coneccionBd.cpp  main.cpp
src/controller/: configuracion.controller.cpp  session.controller.cpp  test.controller.cpp  venta.controller.cpp
src/controller/accion/: venta.controller.cpp
src/db/: sqlite.cpp  wrapbinary.cpp
src/model/: acciones.cpp  config.cpp  niveles_dinero.cpp  persona.cpp  usuarios.cpp  usuarios_roles.cpp
src/service/: main.service.cpp  persona.service.cpp
src/shared/: config_text.cpp  helper.cpp  niveles_almacenamiento.cpp
src/view/: config_view.cpp  main.controller_view.cpp  maxicajero ui.cmb  maxicajero ui.ui  nip_sett_view.cpp  nip_view.cpp  view_config  view_datosEmpresa  view_fianza  view_venta
src/view/config/: view_five.cpp  view_four.cpp  view_one.cpp  view_seven.cpp  view_six.cpp  view_three.cpp  view_two.cpp
src/view/config_maxi/: main.blp  main.ui  settings
src/view/main_maxi/: main.blp  main.ui  settings
src/view/nip_maxi/: main.blp  main.ui  settings
test/: cctalk  cctaltest.cpp  serial  seriaport.cpp  session.cpp  sqlbase.sql  wrapjava.cpp
